<resources>
    <string name="app_name">Theme Sample</string>
    
    <string name="title_text_appearances">Text Appearances</string>
    <string name="title_palette">Palette</string>
    <string name="title_widgets">Widgets</string>
    <string name="tab_title_current_theme">Overview</string>
    <string name="tab_title_other_themes">Other Themes</string>

    <string name="theme_name_tokyo">Tokyo</string>
    <string name="theme_name_illini">Illini</string>
    <string name="theme_name_sea_foam">Sea Foam</string>

    <string name="theme_desc_tokyo">Light</string>
    <string name="theme_desc_illini">Dark</string>
    <string name="theme_desc_sea_foam">Light, dark action bar</string>

    <string name="primary">Primary</string>
    <string name="primary_dark">Primary Dark</string>
    <string name="accent">Accent</string>
    <string name="normal">Normal</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>

    <string name="sample_text_summary">TextAppearances (android:textAppearance) are styles applied specific to text. Android provides different text colors attributes (e.g. android:textColorPrimary) that can be set in your custom theme and will be used with different text appearances. The value of a textColor can either be a simple color, or a selector (e.g. for disabled states).</string>
    <string name="sample_text_primary">textColorPrimary -  It is used for many of the AppCompat TextAppearances such as Headline, Large, Title, Subhead, Body1, Body2, Button, Menu, Action bar.</string>
    <string name="sample_text_secondary">textColorSecondary - It is used for secondary TextAppearances such as Caption, Medium, Action bar subtitle, and so forth. Material themes use the same RGB values for secondary text as primary, but different opacity/alpha value.</string>
    <string name="sample_text_tertiary">textColorTertiary - It is used for tertiary TextAppearances such as TextAppearance.AppCompat.Small, but generally not used. In Material themes, this is currently the same value as the secondary text color (e.g. @color/secondary_text_default_material_dark).</string>
    <string name="sample_text_link">textColorLink - <a href="https://developer.android.com/guide/topics/ui/themes.html">Official docs: themes and styles</a></string>
    <string name="sample_text_summary_inverse">There are corresponding inverse colors such as textColorPrimaryInverse, textColorHintInverse, etc.</string>
    <string name="sample_text_primary_inverse">android:textColorPrimaryInverse</string>
    <string name="sample_text_secondary_inverse">android:textColorSecondaryInverse</string>
    <string name="sample_text_tertiary_inverse">android:textColorTertiaryInverse</string>
    <string name="sample_text_link_inverse">android:textColorLinkInverse</string>

    <string name="sample_widget_checkbox_title">Checkbox</string>
    <string name="sample_widget_checkbox_description">colorControlNormal, colorAccent</string>
    <string name="sample_widget_radio_title">Radio Button</string>
    <string name="sample_widget_radio_description">colorControlNormal, colorAccent, colorControlHighlight</string>
    <string name="sample_widget_switch_title">Switch (SwitchCompat)</string>
    <string name="sample_widget_switch_description">colorSwitchThumbNormal, colorAccent, colorForeground, colorControlHighlight</string>

    <string name="try_theme">Try Theme</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis placerat magna eu semper. Donec sagittis <a href="https://developer.android.com/guide/topics/ui/themes.html">pharetra</a> rhoncus.</string>
</resources>
