<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/widgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_widgets"
        android:textAppearance="?attr/titleTextAppearance"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/widgetTitle"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/checkBoxName"
        style="@style/ViewSample.Name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_widget_checkbox_title"
        app:layout_constraintBaseline_toBaselineOf="@id/checkBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/checkBox"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/checkBoxDescription"
        style="@style/ViewSample.Description"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_widget_checkbox_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxName"/>

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDescription"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox"/>

    <TextView
        android:id="@+id/radioButtonName"
        style="@style/ViewSample.Name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_widget_radio_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/radioButton"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/radioButtonDescription"
        style="@style/ViewSample.Description"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_widget_radio_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/radioButtonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButtonName"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/radioButton"
        app:layout_constraintTop_toBottomOf="@id/radioButtonDescription"/>

    <TextView
        android:id="@+id/switchName"
        style="@style/ViewSample.Name"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="0dp"
        android:text="@string/sample_widget_switch_title"
        app:layout_constraintBaseline_toBaselineOf="@id/switchWidget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/radioButtonDescription"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/switchDescription"
        style="@style/ViewSample.Description"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_widget_switch_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/switchName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchName"/>
</android.support.constraint.ConstraintLayout>